# Coding

./: .gitignore  1.c  CMakeLists.txt  README.md  array.c  codility_test.cpp  euler1.c  gfg.c  meraki.c~  psaux  remove duplicates linkedlist.c  top.txt
2-keys-keyboard/: README.md
Algorithms Documentation/: Thumbs.db
Algorithms Documentation/Narasimha Karumanchi data structure Made easy/: Thumbs.db
Android Chrome/org.mozilla.firefox-37.0.1-APK4Fun.com.apk_export_RHzmR/: manifest.json
Android Chrome/org.mozilla.firefox-37.0.1-APK4Fun.com.apk_export_RHzmR/_locales/en/: messages.json
C/: .fake.sh.swp  MISSING_AP  MISSING_AP.c  \ithPermutation.c  a.out  array.c  bst_succesor.c  const_pointer_initialize.c  const_pointer_initialize.cpp  duplicates_array_n_1  duplicates_array_n_1.c  evenout  evenout.c  fake.sh  gcd_bit.c  increment  increment.c  index.html  index.html.1  int_promotion.c  ithperm.c  mcs1.c  mcs2.c  minheap.c  newthing.c  output.txt  priority_queues.c  priority_queues.cpp  process.cpp  qw.cpp  random_distinct_numbers  random_distinct_numbers.c  redbluebluered.c  remove duplicates linkedlist.c  reverse_ll  reverse_ll.c  scrape  scrape.txt  scrape2.txt  seller.c  (+13 more)
C/fake/: 1446078593+3.c  1446078951+1.c  1446079396+3.c  1446079425+0.c  1446079911+1.c  1446079990+0.c  1446080012+2.c  1446080039+0.c  1446080082+3.c  1446080117+1.c  1446080131+3.c  1446082169+0.c  1446147699+2.c  1446147827+3.c  1446164941+1.c  1446165003+0.c  1446165050+2.c  1446183051+3.c  1446201052+1.c  1446219053+0.c  1446237055+0.c  1446255056+0.c  1446273057+0.c  1446291058+0.c  1446309059+2.c  1446327060+2.c  1446345063+1.c  1446490757+0.c  1446508758+1.c  1446526759+0.c  1446544761+2.c  1446562762+1.c  1446580763+2.c  1446598764+0.c  1446616765+0.c  1446634766+0.c  1446652767+1.c  1446670769+1.c  1446688770+3.c  1446706771+0.c  (+213 more)
Cpp/: 123.c  Assumptions.cpp  a.cpp  a.out  amazon_peter_phoenix.cpp  core_legr_multithread.cpp  first.cpp  func_overload  func_overload.cpp  int_promotion.c  main  main.cpp  marray  marray.cpp  pointers  pointers.cpp  pratice  pratice.cpp  recursion  recursion.cpp  rev_word.cpp  sally.cpp  sally.h  siblings_level_order_traversal.cpp  single_subtree.cpp  single_subtree.h  sparse.cpp  start.cpp
Cpp/buckys/: Sally  Sally.cpp  Sally.h  birthday.cpp  birthday.h  const  const.cpp  main.cpp  people.cpp  people.h
Cpp/mycs/: binary search  binary search.c  binsearchrec  binsearchrec.c  p1.cpp  sample.cpp
Python/: .johnbalance.py.swp  euler3.py  johnbalance.py
Python/lmb.informatik.uni-freiburg.de/people/liu/: rosette-detection
basic-calculator-ii/: basic-calculator-ii.cpp
binary-tree-zigzag-level-order-traversal/: binary-tree-zigzag-level-order-traversal.cpp
dungeon-game/: dungeon-game.cpp
guess-the-word/: guess-the-word.cpp
insert-interval/: insert-interval.cpp
longest-increasing-path-in-a-matrix/: longest-increasing-path-in-a-matrix.cpp
max-points-on-a-line/: max-points-on-a-line.cpp
maximum-product-of-three-numbers/: maximum-product-of-three-numbers.cpp
number-of-islands/: number-of-islands.cpp
number-of-ways-to-paint-n-3-grid/: number-of-ways-to-paint-n-3-grid.cpp
palindrome-linked-list/: palindrome-linked-list.cpp
symmetric-tree/: symmetric-tree.cpp
target-sum/: target-sum.cpp
valid-parentheses/: valid-parentheses.cpp
validate-binary-tree-nodes/: validate-binary-tree-nodes.cpp
walls-and-gates/: walls-and-gates.cpp
webdev/: index.html
